--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,265 @@
 .App {
-  text-align: center;
+  height: 100vh;
+  /* overflow: hidden; */
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
+@media screen and (min-width: 768px) {
+  .App {
+    overflow: hidden;
   }
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+/* login */
+.login_wrap {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-position: left bottom, right bottom;
+  background-size: 620px, 620px, cover;
+  background-image: url(../public/bg-left.svg), url(../public/bg-right.svg);
+}
+
+.css-Jira {
+  position: absolute;
+  top: 20px;
+  width: 100%;
+  height: 100px;
+  background: url(../public/Jira.svg) center center / 5% no-repeat;
+}
+
+.login_box_wrap {
+  margin-top: 30px;
+  padding: 60px;
+  width: 25%;
+  height: 500px;
+  text-align: center;
+  border-radius: 0.5rem;
+  box-sizing: border-box;
+  box-shadow: rgba(0, 0, 0, 0.1) 0 0 10px;
+}
+.login_button {
+  width: 100%;
+  background-color: #0052cc;
+  color: #fff;
+  font-size: 16px;
+}
+
+.login_enroll {
+  display: block;
+  width: 100%;
+  height: 30px;
+  line-height: 30px;
+  font-size: 16px;
+  text-align: center;
+  color: #0052cc;
+  text-decoration: none;
+}
+/* layout */
+.layout_wrap {
   display: flex;
   flex-direction: column;
+  height: 100vh;
+}
+
+.header_wrap {
+  display: flex;
+  width: 100%;
+  height: 80px;
+  position: sticky;
+  top: 0;
+  background: #fff;
+  z-index: 999;
+}
+
+.header_wrap_body {
+  display: flex;
+  justify-content: flex-start;
   align-items: center;
+  height: 80px;
+  margin-left: 20px;
+}
+
+.header_button {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  align-items: center;
+  height: 80px;
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.header_login_out_btn {
+  position: absolute;
+  right: 20px;
+  cursor: pointer;
+  color: blue;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.icon_blue {
+  margin-right: 10px;
+  width: 16px;
+  height: 16px;
+  border: 6px solid #0052cc;
+  transform: rotate(45deg);
+}
+
+.header_button h2 {
+  margin: 0;
+  font-size: 26px;
+  font-weight: normal !important;
+}
+.project_create {
+  width: 300px;
+  font-size: 16px;
+}
+
+.project_listItem {
+  font-size: 18px;
+  padding: 0 10px !important;
+}
+.user_listItem {
+  font-size: 16px;
+  padding: 0 10px !important;
+}
+.project_popover {
+  font-size: 22px;
+  margin-left: 20px;
+  color: #5f5f5f;
+  cursor: pointer;
+}
+.project_create_name {
+  color: #0052cc;
+  cursor: pointer;
+}
+.layout_wrap_project {
+  display: flex;
+  height: 100%;
+}
+.project_side_menu_wrap {
+  width: 200px;
+  border-right: 1px solid #f0f0f0;
+}
+.ant-menu {
+  border: none !important;
+}
+
+.link_title:hover {
+  color: #0052cc !important;
+}
+
+.active {
+  color: #0052cc !important;
+}
+
+.ant-menu-title-content {
+  font-size: 16px;
+}
+
+.project_wrap {
+  flex: 1;
+  padding: 0 30px 100px 30px;
+  overflow: auto;
+  box-sizing: border-box;
+}
+/* project title */
+.project_title_wrap {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin: 32px 0 0 32px;
+  width: 97%;
+}
+
+.project_title_wrap h1 {
+  margin: 0;
+  font-size: 32px;
+}
+
+.project_title_wrap button {
+  margin-right: 10px;
+  font-size: 16px;
+  color: #0052cc;
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
+}
+/* project search */
+.project_search_wrap {
+  display: flex;
+  margin: 0 0 0 32px;
+}
+.search_wrap_input {
+  width: 20%;
+  height: 34px;
+}
+.search_wrap_select {
+  margin-left: 14px;
+  height: 34px;
+}
+/* project table */
+.project_table_wrap {
+  margin-left: 32px;
+  width: 97%;
+  height: 100%;
+}
+
+.project_table_css th,
+.project_table_css td {
+  height: 63px;
+  font-size: 16px;
+}
+
+/* kanban */
+.kanban_title {
+  font-weight: normal;
+  margin: 0;
+}
+
+/* epic 任务组 */
+.epic_body {
+  display: flex;
+  flex-direction: column;
+  /* width: 100%; */
+  /* height: 100%; */
+  padding: 30px;
+}
+
+.epic_title {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  font-size: 16px;
+}
+
+.epic_title_h1 {
+  margin: 0;
+}
+
+.epic_title_button {
+  margin-right: 10px;
+  font-size: 16px;
+  color: #0052cc;
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
+}
+
+.list_item_title {
+  display: flex;
+  justify-content: space-between;
+  cursor: pointer;
+}
+
+.list_item_title button {
+  padding: 2px 15px;
+  font-size: 16px;
+  color: #0052cc;
+  background-color: #fff;
+  border: none;
+  cursor: pointer;
 }
